--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>{java.version}</maven.compiler.target>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <kotlin.version>1.9.10</kotlin.version>
     <kotlinx.serialization.version>1.6.0</kotlinx.serialization.version>
